src/backends/drm/drm_pipeline.cpp
@@ -264,8 +264,8 @@ void DrmPipeline::prepareAtomicModeset(DrmAtomicCommit *commit)
     if (const auto hdr = m_connector->getProp(DrmConnector::PropertyIndex::HdrMetadata)) {
         commit->addProperty(hdr, 0);
     }
-    if (const auto scaling = m_connector->getProp(DrmConnector::PropertyIndex::ScalingMode); scaling && scaling->hasEnum(DrmConnector::ScalingMode::Full_Aspect)) {
-        commit->addEnum(scaling, DrmConnector::ScalingMode::Full_Aspect);
+    if (const auto scaling = m_connector->getProp(DrmConnector::PropertyIndex::ScalingMode); scaling && scaling->hasEnum(DrmConnector::ScalingMode::None)) {
+        commit->addEnum(scaling, DrmConnector::ScalingMode::None);
     }
 
     commit->addProperty(m_pending.crtc->getProp(DrmCrtc::PropertyIndex::Active), 1);
